2005-08-01  Vlad Seryakov  <seryakov@users.sf.net>

	* tclcmds.c: removed usage of old compat functions

2005-06-16  Vlad Seryakov  <seryakov@users.sf.net>

	* nsdbpg.c: removed undefined PgDbServerInit function
	which prevented module to be loaded

2005-06-15  Stephen Deasey  <sdeasey@users.sf.net>

	* dbpg.h:
	* nsdbpg.c:
	* tclcmds.c: Use a regular naming scheme for functions and
	variables.

	* nsdbpg.c: Untabify, reindent and reorganize. Drop emulation code
	for AOLserver 2.x ns_table etc. commands.
	* tclcmds.c: Split extra Tcl commands and bind vaiable emulation
	code into new file.
	* nsdbpg.h:
	* dbpg.h: Rename header to reflect it's private status. Move all
	private declarations into c files, leaving just the handle
	structure shared module wide.
	* Makefile: Remove all the crud.

2005-06-14  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile: Update for initial import into NaviServer CVS.
	* nsdbpg.h:
	* nsdbpg.c: Renamed from nspostgres.x.

2003-03-29  Scott Goodwin  <scott@scottg.net>

	* Makefile: Fixed problem where if AS3 was not set, -lnsdb was not
	being added to library list.

	* Makefile: Added OPENSSL setting to allow you to specify where
	OPENSSL is installed. This is required when compiling nspostgres
	against a PostgreSQL installation that has been compiled with OpenSSL.
	If you get lots of undefined symbols that look like _SSL, _PEM and so
	on, then you need this flag.

2004-02-04  Lamar Owen <lowen@pari.edu>
	* Roll a 4.0 tarball.
	* Tag the 4.0 release.

2003-10-02  Scott Goodwin  <scott@scottg.net>

	* Makefile: extra spaces at the end of one of the lines in the
        check-env target were causing make failure. Error given was:

        /bin/sh: -c: line 2: syntax error: unexpected end of file
        make: *** [check-env] Error 2

2003-09-27  Lamar Owen <lowen@pari.edu>

	* Added -lnsdb for AOLserver 4
	* Added AS3 define for Makefile for building with AOLserver 3

2003-02-17  Lamar Owen <lamar.owen@wgcr.org>
